--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "nod_modules/bootstrap/dist/css/bootstrap.min.css",
+              "nod_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
