--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "nod_modules/bootstrap/dist/css/bootstrap.min.css",
-              "nod_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
